# http-dispatch

./: .gitignore  CHANGELOG.md  LICENSE  README.md  circle.yml  deploy.sh  http-dispatch.cabal  index.html  index.md  params.json  stack.yaml  tutorial.md
.github/workflows/: ci.yml
Examples/: Simple.hs
docs/: tutorial.md
src/Network/HTTP/: Dispatch.hs
src/Network/HTTP/Dispatch/: .#Headers.hs  Api.hs  Builder.hs  Compat.hs  Core.hs  Dispatch.hs  Extra.hs  Headers.hs  Internal.hs  Request.hs  Response.hs  Types.hs  Util.hs
src/Network/HTTP/Dispatch/Examples/: .#Aeson.hs  Aeson.hs  RequestExamples.hs  Simple.hs
src/Network/HTTP/Dispatch/Internal/: Request.hs
test/: Spec.hs
test/Network/HTTP/Dispatch/: CoreSpec.hs  HeadersSpec.hs  IntegrationSpec.hs  RequestSpec.hs  TypeSpec.hs
test/Network/HTTP/Dispatch/Suppport/: BinClient.hs
