name:                http-dispatch
version:             0.6.0.0
synopsis:            High level HTTP client for Haskell
description:         Please see README.md
homepage:            http://github.com/owainlewis/http-dispatch#readme
license:             BSD3
license-file:        LICENSE
author:              Owain Lewis
maintainer:          owain@owainlewis.com
copyright:           2016 Owain Lewis
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Dispatch.Dispatch
                     , Network.HTTP.Dispatch.Headers
                     , Network.HTTP.Dispatch.Request
                     , Network.HTTP.Dispatch.Types
  build-depends:       base >= 4.5 && < 5
                     , http-client
                     , http-client-tls
                     , http-types
                     , bytestring
                     , base64-bytestring
                     , case-insensitive
  default-language:    Haskell2010

test-suite http-dispatch-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , http-dispatch
                     , hspec
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/owainlewis/http-dispatch
